--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no_scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no_scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+p,
+h1,
+h2,
+h3,
+h4 {
+  @apply text-stone-800 dark:text-stone-300;
+}
+
+a {
+  @apply dark:text-spotify_green text-spotify_black hover:font-bold transition-all duration-200;
+}
