--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,7 @@ h4 {
 a {
   @apply dark:text-spotify_green text-spotify_black hover:font-bold transition-all duration-200;
 }
+
+.padded {
+  @apply rounded bg-stone-900/10 dark:bg-stone-300/10 p-1;
+}
