--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,7 @@ a {
 .padded {
   @apply rounded bg-stone-900/10 dark:bg-stone-300/10 p-1;
 }
+
+.default {
+  @apply bg-stone-900/10 hover:bg-stone-900/20 dark:bg-stone-300/10 dark:hover:bg-stone-300/20 duration-300 transition-all rounded-md;
+}
